# cruspy

./: .clangd  .gitignore  .spectral.yaml  CMakeLists.txt  Cargo.toml  README.md  build.rs  pyproject.toml  rust-analyzer.toml
.github/workflows/: test.yml
cmake/: CruspyGen.cmake
cruspy-build/: Cargo.toml
cruspy-build/src/: lib.rs
python/pymergetic/: __init__.py
python/pymergetic/cruspy/: base.py
scripts/: build_core_shared.sh  check_codegen.sh  check_forbidden_includes.sh  check_input_hash.sh  check_unified_tree.py  clangd-update.sh  codegen.sh  demo_crosslang.py  rust-analyzer-prep.sh
src/: allocator.rs  async_bridge.rs  core.rs  errors.rs  lib.rs  macros.rs  memory.rs  model_runtime.rs  module.rs  runtime.rs  schema.rs  shm.rs
src/models/: document.rs
src/pymergetic/: __init__.py  mod.rs
src/pymergetic/cruspy/: __init__.py  __init__.rs  _init.rs  bridge.hpp  manifest.json  mod.rs  model.hpp  shm_string.hpp
src/pymergetic/cruspy/allocator/: __init__.cpp  __init__.hpp  _init.cpp  _init.hpp  domain_backend.cpp  domain_backend.hpp  domain_registry.cpp  domain_registry.hpp  file_map_backend.cpp  file_map_backend.hpp  memory_types.hpp  mod.cpp  mod.hpp  process_arena_backend.cpp  process_arena_backend.hpp  substrate_api.cpp  substrate_api.hpp
src/pymergetic/cruspy/cobject/: _init.cpp
src/pymergetic/cruspy/core/: mod.cpp  mod.hpp  registry.cpp  registry.hpp  type_descriptor.hpp
src/pymergetic/cruspy/errors/: mod.hpp
src/pymergetic/cruspy/field/: __init__.hpp  _init.hpp
src/pymergetic/cruspy/functions/: __init__.cpp  __init__.hpp  _init.hpp  mod.cpp  mod.hpp
src/pymergetic/cruspy/io/: access.rs  info.rs  kind.rs  mapping.rs  mod.rs  resize.rs  slab.rs  state.rs
src/pymergetic/cruspy/klass/: _init.cpp  _init.hpp  meta.hpp  rfl.hpp
src/pymergetic/cruspy/memory/: defaults.rs  mod.rs
src/pymergetic/cruspy/memory/backend/: factory.rs  file.rs  mod.rs  ram.rs  shm.rs
src/pymergetic/cruspy/memory/manager/: data.rs  error.rs  locator.rs  mod.rs  segment.rs  usage.rs
src/pymergetic/cruspy/memory/segment/: catalog.rs  error.rs  header.rs  mod.rs
src/pymergetic/cruspy/memory/segment/catalog/: chain.rs  metatype.rs  metatype_segment.rs  mod.rs  object_segment.rs  objects.rs  pin.rs  primary.rs  stats.rs  wire.rs
src/pymergetic/cruspy/memory/types/: error.rs  flex_string.rs  handle.rs  layout.rs  metatype.rs  mod.rs  object.rs  object_header.rs
src/pymergetic/cruspy/memory/wire/: mod.rs  tags.rs
src/pymergetic/cruspy/models/: __init__.rs  mod.gen.rs
src/pymergetic/cruspy/models/document/: __init__.cpp  __init__.openapi.yaml  __init__.py  __init__.rs  _init.cpp  _init.hpp  mod.cpp  mod.gen.rs  mod.hpp  models.gen.py  types.hpp
src/pymergetic/cruspy/models/document/metadata/: __init__.openapi.yaml  __init__.py  _init.cpp  _init.hpp  mod.cpp  mod.gen.rs  mod.hpp  models.gen.py
src/pymergetic/cruspy/models/hello/: __init__.cpp  __init__.hpp  __init__.py  __init__.rs  hello.openapi.yaml
src/pymergetic/cruspy/models/token/: mod.cpp  mod.hpp  types.hpp
src/pymergetic/cruspy/module/: _init.cpp  detail.hpp
src/pymergetic/cruspy/registry/: __init__.cpp  __init__.hpp  __init__.rs  _init.cpp  _init.hpp
src/pymergetic/cruspy/runtime/: __init__.pyi  __init__.rs  _init.rs  kernel.rs  mod.cpp  mod.hpp
src/pymergetic/cruspy/schema/: annotations.hpp  bridge_make.hpp  codec.cpp  codec.hpp  field.hpp  field_base.cpp  field_base.hpp  fields.hpp  model.hpp  model_base.cpp  model_base.hpp  model_ops.hpp  schema_base.cpp  schema_base.hpp  substrate_api.cpp  substrate_api.hpp  types.hpp  validate.hpp
src/pymergetic/cruspy/shm/: _init.rs  mod.cpp  mod.hpp
src/pymergetic/cruspy/substrate/: _init.cpp  _init.hpp
src/pymergetic/cruspy/testing/: __init__.cpp  __init__.rs
src/pymergetic/cruspy/testing/hello/: __init__.rs
src/pymergetic/cruspy/utils/: fourcc.rs  mod.rs  url.rs  uuid.rs
tests/: conftest.py  test_crosslang_dispatch.py  test_ep_features.py  test_import.py  test_kernel.py  test_methods.py  test_object_bounds.py  test_roundtrip.py  test_scaffold.py  test_shm_domain.py
tests/cruspy_v1/: __init__.rs
tests/cruspy_v1/cobject/: __init__.cpp  __init__.hpp
tests/cruspy_v1/errors/: __init__.hpp
tests/cruspy_v1/field/: __init__.hpp
tests/cruspy_v1/klass/: __init__.cpp  __init__.hpp  detail.hpp  rfl.hpp
tests/cruspy_v1/models/: __init__.py
tests/cruspy_v1/models/document/: __init__.cpp  __init__.hpp
tests/cruspy_v1/models/document/metadata/: __init__.hpp  __init__.rs
tests/cruspy_v1/models/hello/: __init__.py  __init__.rs
tests/cruspy_v1/module/: __init__.cpp  __init__.hpp
tests/cruspy_v1/registry/: rfl.hpp
tests/cruspy_v1/runtime/: __init__.pyi  __init__.rs  kernel.rs
tests/cruspy_v1/shm/: __init__.rs
tests/cruspy_v1/substrate/: __init__.cpp  __init__.hpp
tests/cruspy_v1/testing/: __init__.rs
tests/cruspy_v1/testing/hello/: __init__.cpp
tests/hello/: test_dispatch_matrix.py
tests/rust_shm/: Cargo.toml
tests/rust_shm/src/: layout.rs  lib.rs  metrics.rs  register.rs  registry.rs  schema.rs
tests/rust_shm/src/mem/: backing.rs  kind.rs  mapped.rs  mod.rs
tests/rust_shm/src/mem/device/: file.rs  info.rs  mod.rs  ram.rs  register.rs  shm.rs
tests/rust_shm/src/mem/io/: access.rs  address.rs  file.rs  mod.rs  read.rs  write.rs
tests/rust_shm/src/utils/: mod.rs
tests/rust_shm/tests/: metrics_report.rs  registry_demo.rs  shm_roundtrip.rs
tools/cruspy-gen/templates/cpp/: model.cpp.j2  model.fwd.hpp.j2  model.hpp.j2
tools/cruspy-gen/templates/python/: model.py.j2
tools/cruspy-gen/templates/rust/: model.rs.j2
