[package]
name = "pymergetic-cruspy"
version = "0.1.0"
edition = "2021"
description = "cruspy — polyglot shared-memory runtime"
license = "Apache-2.0"
repository = "https://github.com/pymergetic/cruspy"

[lib]
name = "pymergetic_cruspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cc = "1.2"
glob = "0.3"

[package.metadata.maturin]
name = "pymergetic.cruspy"
