[workspace]
resolver = "2"
members = ["cruspy-build", "tests/rust_shm"]

[package]
name = "pymergetic-cruspy"
version = "0.1.0"
edition = "2021"
description = "cruspy — polyglot shared-memory runtime"
license = "Apache-2.0"
repository = "https://github.com/pymergetic/cruspy"

[lib]
name = "pymergetic_cruspy"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mem_demo"
path = "src/bin/mem_demo.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1.43", features = ["rt-multi-thread"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["mman", "fs"] }
ctor = "0.2"
paste = "1.0"
allocator-api2 = "0.4"
talc = { version = "5", features = ["counters"] }
getrandom = "0.3"
thiserror = "1.0"

[build-dependencies]
cc = "1.2"
cruspy-build = { path = "cruspy-build" }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.maturin]
name = "pymergetic.cruspy"
